fix alignment and text

--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -17,3 +17,8 @@ $line-color: rgba(156, 151, 151, 0.32);
 	margin-left:20px;
 }
 
+.margin-right-20 {
+	margin-right:20px;
+}
+
+
